# articify-bot

./: .env.dist  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
.docker/: docker-compose-prod.yml
.docker/images/bot/: Dockerfile
.docker/scripts/bot/: run.sh
src/: bot.rs  creator.rs  lib.rs  main.rs
